# unintended-consequences

./: .gitignore  README.md  generate_all_plots.py  pyproject.toml  report.aux  report.out  report.toc
data/: Return.csv  vix.csv
docs/: medium_long_explanation.md  report.md  report.tex  run_plots.py  short_blog.md  source.txt  subtlety.md
src/: __main__.py  analysis_crisis.py  analysis_crisis_periods.py  analysis_monte_carlo.py  analysis_overfitting.py  analysis_pre_1998.py  analysis_retail_investor.py  analysis_rolling_metrics.py  analysis_transaction_costs.py  analysis_turnover.py  analysis_vix_filter.py  analysis_walk_forward.py  backtest.py  generate_plots.py  vix_analysis.py
src/analysis/: crisis.py  crisis_periods.py  final_analysis.py  ma_filter.py  monte_carlo.py  overfitting.py  pre_1998.py  retail_investor.py  rolling_metrics.py  transaction_costs.py  turnover.py  vix_filter.py  walk_forward.py
src/visualization/: imbalance.py  interactive_ma_strategy.py  ma_strategy.py  plots.py  pnl_by_regime.py  position.py  position_vs_vix.py  signal_contribution.py
