[tool.poetry]
name = "the unintended consequence of rebalancing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
numpy = "^2.3.2"
matplotlib = "^3.10.3"
statsmodels = "^0.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
